Completes API to Add and remove Users topics association

--- a/lib/know_your_customer_web/templates/layout/root.html.leex
+++ b/lib/know_your_customer_web/templates/layout/root.html.leex
@@ -16,7 +16,7 @@
           <ul>
             <%= if signed_in?(@conn) do %>
               <li>
-                <a href="/logout">logout</a>
+                <%= link "Logout", to: Routes.session_path(@conn, :delete), method: :delete %>
               </li>
             <% else %>
               <li>
