--- a/assets/css/phoenix.css
+++ b/assets/css/phoenix.css
@@ -99,3 +99,12 @@ header nav a {
     margin: 2rem 1rem;
   }
 }
+
+.topic-card {
+  width: 100%;
+  height: 100%;
+  border: 1px solid black;
+  border-radius: 5px;
+  padding: 10px;
+  margin: 5px;
+}
